--- a/Analisa Albert - Brazilian E-commerce Olist/Overall EDA Analysis.ipynb
+++ b/Analisa Albert - Brazilian E-commerce Olist/Overall EDA Analysis.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basis Analysis\n",
+    "# Problem Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA Analysis\n",
     "\n",
     "\r",
     "Analisa pada dataset pesanan, pelanggan, pembayaran, produk, dan ulasan.\n",
